# HomeAssistantTelegram

./: .coverage  .dockerignore  .env.example  .gitignore  .replit  BADGE_FIXES.md  Dockerfile  GITHUB_COMMIT_INSTRUCTIONS.md  GITHUB_FIX_INSTRUCTIONS.md  GITHUB_MERGE_INSTRUCTIONS.md  GITHUB_SETUP.md  GITHUB_TESTS_FIX.md  LINTER_FIXES.md  PULL_REQUEST.md  README-Docker.md  README.md  TESTING.md  app.py  bot.py  bot_runner.py  coverage.xml  docker-compose.dev.yml  docker-compose.yml  home_assistant.py  init.sql  main.py  metrics.py  nginx.conf  pyproject.toml  pytest.ini  pytest_quick_fix.ini  replit.md  telegram_bot_service.py
.github/workflows/: ci.yml
attached_assets/: Pasted-Run-uv-run-pytest-cov-cov-report-xml-cov-report-html-cov-report-term-missing-verbose--1751216118454_1751216118456.txt
static/: style.css
templates/: base.html  index.html
tests/: conftest.py  conftest_simple.py  test_app.py  test_basic.py  test_bot.py  test_home_assistant.py  test_metrics.py
