[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "prometheus-client>=0.22.1",
    "python-telegram-bot==21.5",
    "requests>=2.32.4",
    "telegram>=0.0.1",
]
