[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "coverage>=7.9.1",
    "flake8>=7.3.0",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "isort>=6.0.1",
    "prometheus-client>=0.22.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "python-telegram-bot==21.5",
    "requests>=2.32.4",
    "telegram>=0.0.1",
]
